--- a/admission_form/style.css
+++ b/admission_form/style.css
@@ -27,7 +27,33 @@ form{
     max-width: 50px;
 }
 
-.preview{
+/* image section */
+.imageDiv {
+    position: relative;
+    height: 120px;
+  }
+  
+  .imageShow {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 150px;
+    height: 120px;
+    /* border: 3px solid #73AD21; */
+  }
+  .imageShow img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+.imageShow img:hover{
+    cursor: pointer;
+}
+.imageDiv input{
+    /* opacity: 0; */
+    display: none;
+}
+/* .preview{
     max-width: 180px;
     max-height: 120px;
     
@@ -35,7 +61,7 @@ form{
 .preview img{
     width: 100%;
     max-height: 100%;
-}
+} */
 
 .label-input{
     margin: 16px 0px;
