--- a/admission_form/style.css
+++ b/admission_form/style.css
@@ -1,3 +1,10 @@
+/* Chrome, Safari, Edge, Opera ......for arrow sign in input field where type="number" */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .main{
     display: flex;
     flex-direction: column;
@@ -10,6 +17,9 @@ form{
     border: 7px Ridge rgb(60, 196, 189);
     padding: 25px 60px;
     border-radius: 15px;
+}
+form textarea:focus, input:focus{
+    outline: none;
 }
 .dis-flex{
     display: flex;
@@ -39,7 +49,6 @@ form{
     right: 0;
     width: 150px;
     height: 120px;
-    /* border: 3px solid #73AD21; */
   }
   .imageShow img{
     width: 100%;
@@ -77,6 +86,7 @@ form{
 .input-field{
     min-width: 800px;
     min-height: 30px;
+    border: 2px solid rgb(121, 134, 116);
     border-radius: 5px;
     font-size: 17px;
 }
@@ -100,3 +110,5 @@ form{
     color: rgb(98, 32, 165);
     cursor: grab;
    }
+
+
