add to card modify

--- a/add_to_card/style.css
+++ b/add_to_card/style.css
@@ -70,6 +70,7 @@ header .shopping span{
     background-color: #453E3B;
     height: 100vh;
     transition: 0.5s;
+    overflow: scroll;
 }
 .active .card{
     left: calc(100% - 500px);
