--- a/React_Projects/first-app/src/styles.css
+++ b/React_Projects/first-app/src/styles.css
@@ -32,6 +32,9 @@
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
+  li button{
+    margin-left: 10px;
+  }
   
   .input {
     border: none;
@@ -50,12 +53,12 @@
   
   li {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 10px 14%;
   }
   
-  li:before {
+  .listShow:before {
     content: "*";
     margin-right: 5px;
   }
